KFSPTS-28700 add changes to overlays